--- a/myGOI.yml
+++ b/myGOI.yml
@@ -1,8 +1,13 @@
 earlyVsLateCutoffDays: 0
-inputDataPath: expandedIntSiteData.tsv.gz
+inputDataPath: data/intSiteData.tsv.gz
 minSampleAbund: 25
 minGeneSubjects: 2
 maxDistNearestGene: 50000
 longitudinal_minNumSubjects: 3
+longitudinal_minNumSites: 3
+longitudinal_minNumTimepoints: 3
 longitudinal_minTimeDays: 90
 volcanoPlot_numTopGeneLabels: 10
+COSMIC_oncogene_table: data/COSMIC_oncogenes.txt
+COSMIC_tsg_table: data/COSMIC_oncogenes_tumor_suppressors.txt
+allOnco_oncogene_table: data/allOnco.txt
